# internet-disabler

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: WlanException.hpp  main.cpp
src/adapters/: detectInterface.cpp  detectInterface.hpp  ethernet.cpp  ethernet.hpp  wifi.cpp  wifi.hpp
